--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,17 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://www.rqwebdev.com/images/rqphot.png"
+    />
+    <meta
+      name="image"
+      property="og:image:secure_url"
+      content="https://www.rqwebdev.com/images/rqphot.png"
+    />
+    <meta name="author" content="Richard Quigley" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
